# stable-cheese

./: .gitignore  LICENSE  README.md  TODO.md  app.py  license.txt  main.py  pyproject.toml  requirements.txt
src/: caption_tools.py  interrogation.py  logging.py
stable_cheese/: main.py
stable_cheese/src/: enum_model_type.py  interrogation.py
test/: test_images.py
